--- a/styles/blog.css
+++ b/styles/blog.css
@@ -94,7 +94,7 @@ hr.rounded {
 }
 
 /* Header */
-header {
+.header {
     width: 100%;
     background-color: #1a1a1a;
     flex: 0 1 auto;
@@ -183,9 +183,37 @@ header {
             margin: 20px 0 30px;
         }
 
+.posts {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 200px;
+}
+
+    .post-links ul {
+        padding: 30px 50px 30px 50px;
+        color: rgb(30, 30, 30);
+    }
+
+    .post-links ul a {
+        color:rgb(0, 0, 153);
+        font-size: 24px;
+        text-decoration: none;
+    }
+
+    .post-months ul {
+        padding: 30px 50px 30px 20px;
+        color: rgb(30, 30, 30);
+    }
+
+    .post-months ul a {
+        color:rgb(76, 0, 153);
+        font-size: 24px;
+        text-decoration: none;
+    }
 
 /* Footer */
-footer {
+.footer {
     background-color: #111111;
     margin: auto;
     text-align: center;
@@ -193,7 +221,7 @@ footer {
     flex: 0 1 auto;
 }
 
-    footer p {
+    .footer p {
         color: rgb(90, 90, 90);
         font-size: 14px;
         line-height: 22px;
