--- a/styles/blog.css
+++ b/styles/blog.css
@@ -52,19 +52,19 @@ main {
 h1 {
     font-size: 36px;
     font-family: "opensans-bold";
-    margin-bottom: 5px;
+    margin-bottom: 4px;
 }
 
 h2 {
     font-size: 24px;
     font-family: "opensans-semibold";
-    margin-bottom: 2px;
+    margin-bottom: 4px;
 }
 
 h3 {
     font-size: 20px;
     font-family: "opensans-semibold";
-    margin-bottom: 30px;
+    margin-bottom: 4px;
 }
 
 h4 {
@@ -147,64 +147,72 @@ hr.rounded {
 
 /* Content */
 .content {
-    margin: 20px;
+    margin: 20px 250px;
     flex: 1 1 auto;
-}
-
-    .featured-post {
-        display: flex;
-        background-color: #1a1a1a;
-        height: 200px;
-        margin-right: 45%;
-    }
-
-        .featured-left {
-            width: 200px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-            .featured-left img {
-                height: 90%;
-                width: 90%;
-                object-fit: cover;
-            }
-
-        .featured-right {
-            align-self: center;
-            padding: 20px;
-            color: #fff;
-        }
-
-.posts {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 0 200px;
 }
 
-    .post-links ul {
-        padding: 30px 50px 30px 50px;
-        color: rgb(30, 30, 30);
+    .blog-main {
+        flex-basis: 70%;
     }
 
-    .post-links ul a {
-        color:rgb(0, 0, 153);
-        font-size: 24px;
-        text-decoration: none;
+        .featured-posts {
+            margin: 10px 0px;;
+        }
+
+            .featured-post {
+                display: flex;
+                background-color: #1a1a1a;
+                height: 200px;
+                margin: 5px 0px;
+            }
+
+                .featured-left {
+                    width: 200px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                    .featured-left img {
+                        height: 90%;
+                        width: 90%;
+                        object-fit: cover;
+                    }
+
+                .featured-right {
+                    align-self: center;
+                    padding: 20px;
+                    color: #fff;
+                }
+        
+        .blog-posts h2 {
+            padding-top: 15px;
+        }
+
+        .blog-posts ul {
+            list-style-position: inside;
+        }
+
+        .blog-posts a {
+            color:rgb(30, 30, 30);
+        }
+
+
+    .blog-sidebar {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0px 20px 60px;
     }
 
-    .post-months ul {
-        padding: 30px 50px 30px 20px;
-        color: rgb(30, 30, 30);
-    }
+        .post-months ul {
+            list-style-position: inside;
+        }
 
-    .post-months ul a {
-        color:rgb(76, 0, 153);
-        font-size: 24px;
-        text-decoration: none;
-    }
+        .post-months a {
+            color: rgb(30, 30, 30);
+        }
 
 /* Footer */
 .footer {
