--- a/html/blog/templates/blog-template.html
+++ b/html/blog/templates/blog-template.html
@@ -4,6 +4,7 @@
 		<title>Blog Title</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/styles/blog.css">
+		<link rel="stylesheet" href="/fonts/fontawesome-free-5.15.3-web/css/all.min.css">
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
