--- a/html/blog/templates/header.html
+++ b/html/blog/templates/header.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-mobile">
     <div class="nav-logo">
-      <a href="/index.html"><img src="/images/company/logo.png"></a>
+      <h1>{BLOG_NAME}</h1>
     </div>
 
     <button class="nav-menu">
@@ -11,11 +11,11 @@
 
   <div class="nav-links" id="navLinks">
     <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/html/company/courses.html">Group Courses</a></li>
-      <li><a href="/html/company/personal.html">Personal Help</a></li>
-      <li><a href="/html/blog/blog.html">Blog</a></li>
-      <li><a href="/html/company/contact.html">Contact</a></li>
+      <li><a href="/html/blog/blog.html">Home</a></li>
+      <li><a href="/html/blog/blog.html">Posts</a></li>
+      <li><a href="/html/blog/blog.html">Archive</a></li>
+      <li><a href="/html/blog/blog.html">Projects</a></li>
+      <li><a href="/html/blog/blog.html">Contact</a></li>
     </ul>
   </div>
 </nav>
