--- a/styles/blog.css
+++ b/styles/blog.css
@@ -52,19 +52,19 @@ main {
 h1 {
     font-size: 36px;
     font-family: "opensans-bold";
-    margin-bottom: 4px;
+    margin-bottom: 5px;
 }
 
 h2 {
     font-size: 24px;
     font-family: "opensans-semibold";
-    margin-bottom: 4px;
+    margin-bottom: 2px;
 }
 
 h3 {
     font-size: 20px;
     font-family: "opensans-semibold";
-    margin-bottom: 4px;
+    margin-bottom: 30px;
 }
 
 h4 {
@@ -90,7 +90,7 @@ a {
 hr.rounded {
     border: 1px solid #1a1a1a;
     border-radius: 5px;
-    margin: 5px 45% 8px 0px;
+    margin: 5px 0px 8px 0px;
 }
 
 /* Header */
@@ -104,14 +104,13 @@ header {
     nav {
         padding: 30px 2%;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         align-items: center;
     }
 
-        .nav-logo img {
+        .nav-logo h1 {
+            color: #fff;
             max-width: 220px;
-            width: auto;
-            height: auto;
         }
 
         .nav-menu {
@@ -147,7 +146,7 @@ header {
 
 /* Content */
 .content {
-    margin: 20px 250px;
+    margin: 20px 200px;
     flex: 1 1 auto;
     display: flex;
     justify-content: space-between;
@@ -163,7 +162,7 @@ header {
 
             .featured-post {
                 display: flex;
-                background-color: #1a1a1a;
+                background-color:#1a1a1a;
                 height: 200px;
                 margin: 5px 0px;
             }
@@ -204,6 +203,7 @@ header {
         display: flex;
         flex-direction: column;
         margin: 20px 0px 20px 60px;
+        min-width: 200px;
     }
 
         .post-months ul {
@@ -211,12 +211,12 @@ header {
         }
 
         .post-months a {
-            color: rgb(30, 30, 30);
+            color:rgb(30, 30, 30);
         }
 
 /* Footer */
 footer {
-    background-color: #111111;
+    background-color:#111111;
     margin: auto;
     text-align: center;
     width: 100%;
@@ -224,43 +224,20 @@ footer {
 }
 
     footer p {
-        color: rgb(90, 90, 90);
+        color:rgb(90, 90, 90);
         font-size: 14px;
         line-height: 22px;
         margin: 10px;
     }
 
-    .footer-row {
-        background-color: #1a1a1a;
-        display: flex;
-        justify-content: center;
-        padding: 10px 0;
+    footer a {
+        color:rgb(90, 90, 90);
+        text-decoration: none;
     }
 
-        .footer-column {
-            text-align: left;
-            box-sizing: border-box;
-            padding: 20px 80px;
-        }
-
-            .footer-column h3 {
-                color: #fff;
-                font-size: 18px;
-                margin: 0 0 5px 0;
-            }
-
-            .footer-column ul {
-                list-style: none;
-            }
-
-                .footer-column ul li a {
-                    color: rgb(180, 180, 180);
-                    text-decoration: none;
-                }
-
-                    .footer-column ul li a:hover {
-                        text-decoration: underline;
-                    }
+    footer a:hover {
+        text-decoration: underline;
+    }
 
 /* Mobile Modifications */
 @media(max-width: 1000px) {
@@ -306,8 +283,4 @@ footer {
         margin-right: 0;
     }
 
-    /* Footer */
-    .footer-column {
-        padding: 20px 40px;
-    }
 }
