--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,15 @@ footer {
         line-height: 22px;
     }
 
+    footer a {
+        color:rgb(90, 90, 90);
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+    }
+
     .footer-row {
         background-color: #1a1a1a;
         display: flex;
