--- a/html/blog/templates/header.html
+++ b/html/blog/templates/header.html
@@ -12,10 +12,10 @@
   <div class="nav-links" id="navLinks">
     <ul>
       <li><a href="/html/blog/blog.html">Home</a></li>
-      <li><a href="/html/blog/blog.html">Posts</a></li>
-      <li><a href="/html/blog/blog.html">Archive</a></li>
-      <li><a href="/html/blog/blog.html">Projects</a></li>
-      <li><a href="/html/blog/blog.html">Contact</a></li>
+      <li><a href="/html/blog/posts.html">Posts</a></li>
+      <li><a href="/html/blog/archive.html">Archive</a></li>
+      <li><a href="/html/blog/projects.html">Projects</a></li>
+      <li><a href="/html/blog/contact.html">Contact</a></li>
     </ul>
   </div>
 </nav>
