--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,6 @@ html, body {
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: 100%;
 }
 
@@ -155,7 +154,7 @@ html:not([data-scroll='0']) header {
 .intro {
     min-height: 70vh;
     width: 100%;
-    background-image: linear-gradient(rgba(149, 152, 161, 0.4),rgba(149, 152, 161, 0.4)),url(/images/company/banner.png);
+    background-image: linear-gradient(rgba(149, 152, 161, 0.4),rgba(149, 152, 161, 0.4)),url(/images/banner.png);
     background-position: center;
     background-size: cover;
     display: flex;
