--- a/styles/style.css
+++ b/styles/style.css
@@ -39,15 +39,15 @@
     font-family: "opensans-regular";
 }
 
-html, body {
+html {
     height: 100%;
-    scroll-behavior: smooth;
 }
 
-main {
+body {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    scroll-behavior: smooth;
 }
 
 h1 {
