reset blog domain in header

--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -14,7 +14,7 @@
       <li><a href="/index.html">Home</a></li>
       <li><a href="/html/courses.html">Group Courses</a></li>
       <li><a href="/html/personal.html">Personal Help</a></li>
-      <li><a href="https://verdaemon.com">Blog</a></li>
+      <li><a href="blog.technologyfriends.net">Blog</a></li>
       <li><a href="/html/contact.html">Contact</a></li>
     </ul>
   </div>
